force-app/main/default/objects/GTM_Saved_Configuration__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>When unchecked, the shared configurator link for this record shows an "inactive" message to the client instead of the configurator, without deleting the record or hiding it from the rep's own Saved Links list.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>