force-app/main/default/objects/GTM_Saved_Configuration__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <description>Client/company name entered in the Customize panel.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>