force-app/main/default/objects/GTM_Saved_Configuration__c/fields/Config_Payload__c.field-meta.xml
<CustomField>
    <fullName>Config_Payload__c</fullName>
    <label>Config Payload</label>
    <description>JSON snapshot of the token state (company, accent, source platform, etc.) at save time, so a saved config can be reopened for editing.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>