force-app/main/default/objects/GTM_Saved_Configuration__c/fields/Generated_URL__c.field-meta.xml
<CustomField>
    <fullName>Generated_URL__c</fullName>
    <label>Generated URL</label>
    <description>The shareable, guest-accessible configurator link generated by the Customize panel. LongTextArea, not Url -- a Url field caps at 255 chars, and once a rep fills in a custom note, a booking link, and proof numbers, the fully URL-encoded link routinely exceeds that (root cause of "We could not save this link" -- STRING_TOO_LONG on insert/update, swallowed into a generic message by the old catch block).</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>