force-app/main/default/objects/GTM_Saved_Configuration__c/fields/Link_Password__c.field-meta.xml
<CustomField>
    <fullName>Link_Password__c</fullName>
    <label>Link Password</label>
    <description>Optional password guests must enter before viewing this engagement link.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>