force-app/main/default/objects/GTM_Saved_Configuration__c/fields/Notify_Email__c.field-meta.xml
<CustomField>
    <fullName>Notify_Email__c</fullName>
    <label>Notify Email</label>
    <description>Where assessment-request alerts for this specific engagement link are sent. Set by the rep in the wizard, or defaulted at save time to the email of the Salesforce user who created the link. Read by GtmAssessmentRequestController.notify() in preference to the org-wide GTM_Assessment_Config__mdt default.</description>
    <type>Email</type>
</CustomField>