force-app/main/default/objects/GTM_Saved_Configuration__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <label>Offering</label>
    <description>Which offering this configuration was built for, e.g. migration-accelerator. Free text so new offerings don't require a schema change.</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>