force-app/main/default/objects/GTM_Saved_Configuration__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <description>Links this saved configurator link to the deal it belongs to, so it shows as a related record on the Opportunity in Sales Cloud.</description>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Engagement Links</relationshipLabel>
    <relationshipName>GTM_Saved_Configurations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>